--- a/index.html
+++ b/index.html
@@ -979,7 +979,7 @@
 		    <p>Devin Eiring</p>
 		   </div>
 	     </div>
-             <div>Devin Eiring brings 15 years of experience in multiple areas of the coffee industry. From 2013 to 2019, he led coffee roasting operations and worked as the head roaster for Verve Coffee Roasters in Santa Cruz, CA. He now works as a green coffee trader for Crop to Cup in Brooklyn.<br><br></div>
+             <div>Devin Eiring brings 15 years of experience in multiple areas of the coffee industry. From 2013 to 2019, he led coffee roasting operations and worked as the head roaster for Verve Coffee Roasters in Santa Cruz, CA. He now works as a green coffee trader for Crop to Cup in Brooklyn.</div>
 	   </div>
 
             <div class="team-item">
@@ -990,7 +990,7 @@
                   <a class="def-link" href="https://cold-rice.info/" target="_blank">cold-rice.info</a>
                 </div>
               </div>
-              <div>Cold Rice is the web development practice of Mitchell Barton. Based in Salt Lake City, Utah, USA, Cold Rice specializes in building bespoke websites using a variety of tools.</div>
+              <div>Osciallations web development by Cold Rice, the practice of Mitchell Barton. Based in Salt Lake City, Utah, USA, Cold Rice specializes in building bespoke websites using a variety of tools.<br><br></div>
             </div>
 
           </div>
