--- a/index.html
+++ b/index.html
@@ -990,7 +990,7 @@
                   <a class="def-link" href="https://cold-rice.info/" target="_blank">cold-rice.info</a>
                 </div>
               </div>
-              <div>Osciallations web development by Cold Rice, the practice of Mitchell Barton. Based in Salt Lake City, Utah, USA, Cold Rice specializes in building bespoke websites using a variety of tools.<br><br></div>
+              <div>Web development by Cold Rice, the practice of Mitchell Barton. Based in Salt Lake City, Utah, USA, Cold Rice specializes in building bespoke websites using a variety of tools.<br><br></div>
             </div>
 
           </div>
