--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </div>
           
           <div class="content">
-            <p>With a <a class="def-link" href="#loring-s15">Loring S15</a><sup>iv</sup>, seventy kilograms of exceptional green coffee<sup>ii</sup>, and zero adherence to any steadfast <q>rules,</q> Oscillations was conceived. Guided by taste first, this collaborative endeavor aims to demonstrate unique approaches to roasting coffee on a Loring system. We invite you to explore the plethora of information we’re sharing here, including specific roast curves and data<sup>iii</sup>, the story behind the bean<sup>ii</sup> we roasted, and background on our team<sup>vi</sup>.
+            <p>With a <a class="def-link" href="#-s15">Loring S15</a><sup>iv</sup>, seventy kilograms of exceptional green coffee<sup>ii</sup>, and zero adherence to any steadfast <q>rules,</q> Oscillations was conceived. Guided by taste first, this collaborative endeavor aims to demonstrate unique approaches to roasting coffee on a Loring system. We invite you to explore the plethora of information we’re sharing here, including specific roast curves and data<sup>iii</sup>, the story behind the bean<sup>ii</sup> we roasted, and background on our team<sup>vi</sup>.
 </p>
           
             <!-- Carousel -->
@@ -875,7 +875,7 @@
           </div>
 
           <div class="content">
-            <p>All the coffees for Oscillations were roasted on a <a class="def-link" target="_blank" href="https://loring.com">Loring S15</a> (15kg). Unlike traditional drum roasters that utilize a combination of conduction and convection to roast, Loring systems are almost exclusively convective. We set out to explore the possibilities and limits of this system as it relates to traditional drum roasters.</p>
+            <p>All the coffees for Oscillations were roasted on a <a class="def-link" target="_blank" href="https://loring.com">Loring S15</a> (15kg) at <a class="def-link" target="_blank" href="https://sharedroasting.com">Shared Roasting</a>. Unlike traditional drum roasters that utilize a combination of conduction and convection to roast, Loring systems are almost exclusively convective. We set out to explore the possibilities and limits of this system as it relates to traditional drum roasters.</p>
           </div>
         </div>
       </section>
