--- a/index.html
+++ b/index.html
@@ -992,7 +992,17 @@
               </div>
               <div>Web development by Cold Rice, the practice of Mitchell Barton. Based in Salt Lake City, Utah, USA, Cold Rice specializes in building bespoke websites using a variety of tools.<br><br></div>
             </div>
-
+  	
+	  <div class="team-item">
+	     <div>
+               <p class="icon”>#</p>
+	          <div>
+		    <p>Thank You</p>
+		   </div>
+	     </div>
+             <div>Thank you to Nestor Lasso for the exceptional green coffee; to <a class="def-link" target="_blank" href="https://www.falconcoffees.com">Falcon Specialty</a> for your sourcing expertise; to <a class="def-link" target="_blank" href="https://www.croptocup.com">Crop to Cup Importers</a> for allowing us to use their Brooklyn cupping lab for analysis of this project; and to <a class="def-link" target="_blank" href="https://sharedroasting.com/">Shared Roasting</a> for providing the roasting playground.</div>
+	   </div>
+		  
           </div>
 	</div>
       </section>
