--- a/index.html
+++ b/index.html
@@ -995,7 +995,7 @@
   	
 	  <div class="team-item">
 	     <div>
-               <p class="icon”>#</p>
+               <p class="icon”>¶</p>
 	          <div>
 		    <p>Thank You</p>
 		   </div>
