--- a/index.html
+++ b/index.html
@@ -995,12 +995,12 @@
   	
 	  <div class="team-item">
 	     <div>
-               <p class="icon”>¶</p>
+               <p class="icon">#</p>
 	          <div>
 		    <p>Thank You</p>
 		   </div>
 	     </div>
-             <div>Thank you to Nestor Lasso for the exceptional green coffee; to <a class="def-link" target="_blank" href="https://www.falconcoffees.com">Falcon Specialty</a> for your sourcing expertise; to <a class="def-link" target="_blank" href="https://www.croptocup.com">Crop to Cup Importers</a> for allowing us to use their Brooklyn cupping lab for analysis of this project; and to <a class="def-link" target="_blank" href="https://sharedroasting.com/">Shared Roasting</a> for providing the roasting playground.<br><br></div>
+        	<div>Thank you to Nestor Lasso for the exceptional green coffee; to <a class="def-link" target="_blank" href="https://www.falconcoffees.com">Falcon Specialty</a> for your sourcing expertise; to <a class="def-link" target="_blank" href="https://www.croptocup.com">Crop to Cup Importers</a> for allowing us to use their Brooklyn cupping lab for analysis of this project; and to <a class="def-link" target="_blank" href="https://sharedroasting.com/">Shared Roasting</a> for providing the roasting playground.<br><br></div>
 	   </div>
 		  
           </div>
